--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
           </li>
         </ul>
         <form class=" socialicons  justify-content-end">
-          <a href="" style="color: black;">LOGIN <i class="fas fa-sign-in-alt login-icon"
-              style="color: #000000;"></i></a>
+          <a href="" style="color: black;">LOGIN <i class="fa-solid fa-user" style="color: #000000;"></i></a>
           <a href=""><i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i></a>
         </form>
 
@@ -171,65 +170,99 @@
 
 
     <!-- about-start -->
-     <br><br>
+    <br><br>
     <div class="container my-5 about-container">
       <h1 class="text-center text-black" style="margin-left: 420px;">ABOUT US</h1>
       <h3 class="text-center text-dark mt-3" style="margin-left: 420px;">PYTHON FULL STACK DEVELOPER</h3>
-  
+
       <div class="about-content mt-4 d-flex flex-column flex-md-row align-items-center justify-content-center">
-          <!-- Image Section -->
-          <img src="./furniture.avif" alt="About Image" class="about-image"  height="300px" width="500px">
-  
-          <!-- About Details -->
-          <div class="about-text">
-              <p class="text-dark justify-content-between">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquid recusandae dicta laborum quidem
-                  omnis fugit provident ipsa quos, velit sint quod non ipsum nostrum error, asperiores officiis dolorum earum.
-              </p>
-              <button class="btn btn-info text-white mt-3">Read More</button>
-          </div>
+        <!-- Image Section -->
+        <img src="./furniture.avif" alt="About Image" class="about-image" height="300px" width="500px">
+
+        <!-- About Details -->
+        <div class="about-text">
+          <p class="text-dark justify-content-between">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi aliquid recusandae dicta laborum quidem
+            omnis fugit provident ipsa quos, velit sint quod non ipsum nostrum error, asperiores officiis dolorum earum.
+          </p>
+          <button class="btn btn-info text-white mt-3">Read More</button>
+        </div>
       </div>
-  </div>
+    </div>
 
 
     <!-- about-end -->
 
     <div>
-      <center><h1 class="py-5" >LATEST BLOG</h1></center>
+      <center>
+        <h1 class="py-5">LATEST BLOG</h1>
+      </center>
       <div class="row mt-5 ms-5 d-flex align-items-center justify-content-center">
         <div class="col-4">
-            <div class="card d-flex align-items-center" style="width: 70%;">
-                <img src="./bed.webp" style="height: 285px;" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">LOOK EVEN SLIGHTLY AVAILABLE</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, veritatis. Inventore amet odit, animi dolorum nemo ipsa dolore, sit facere praesentium impedit debitis suscipit. Deserunt rem eos totam saepe quos.</p>
-                  <a href="#" class="btn btn-primary">READ MORE</a>
-                </div>
-              </div>
+          <div class="card d-flex align-items-center" style="width: 70%;">
+            <img src="./bed.webp" style="height: 285px;" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">LOOK EVEN SLIGHTLY AVAILABLE</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, veritatis.
+                Inventore amet odit, animi dolorum nemo ipsa dolore, sit facere praesentium impedit debitis suscipit.
+                Deserunt rem eos totam saepe quos.</p>
+              <a href="#" class="btn btn-primary">READ MORE</a>
+            </div>
+          </div>
         </div>
         <div class="col-4">
-            <div class="card d-flex align-items-center" style="width: 70%;">
-                <img src="./chair.jpeg" style="height: 285px;" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">LOOK EVEN SLIGHTLY AVAILABLE</h5>
-                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nobis cumque quis ea! Officiis minus enim facere voluptatibus accusamus cupiditate dolorem. Sapiente, eos qui. Aperiam molestiae eveniet aliquam magni voluptate?</p>
-                  <a href="#" class="btn btn-primary">READ MORE</a>
-                </div>
-              </div>
+          <div class="card d-flex align-items-center" style="width: 70%;">
+            <img src="./chair.jpeg" style="height: 285px;" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">LOOK EVEN SLIGHTLY AVAILABLE</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nobis cumque quis
+                ea! Officiis minus enim facere voluptatibus accusamus cupiditate dolorem. Sapiente, eos qui. Aperiam
+                molestiae eveniet aliquam magni voluptate?</p>
+              <a href="#" class="btn btn-primary">READ MORE</a>
+            </div>
+          </div>
         </div>
         <div class="col-4">
-            <div class="card d-flex align-items-center" style="width: 70%;">
-                <img src="./sofa.webp" style="height: 285px;"class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">LOOK EVEN SLIGHTLY AVAILABLE</h5>
-                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum voluptatem sequi alias debitis asperiores quod qui eos, ipsam quia velit impedit deserunt ad numquam, ipsa commodi quibusdam nam. Aliquid, sed.</p>
-                  <a href="#" class="btn btn-primary">READ MORE</a>
-                </div>
-              </div>
+          <div class="card d-flex align-items-center" style="width: 70%;">
+            <img src="./sofa.webp" style="height: 285px;" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">LOOK EVEN SLIGHTLY AVAILABLE</h5>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum voluptatem sequi alias
+                debitis asperiores quod qui eos, ipsam quia velit impedit deserunt ad numquam, ipsa commodi quibusdam
+                nam. Aliquid, sed.</p>
+              <a href="#" class="btn btn-primary">READ MORE</a>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+<center>
+    <div class="row py-5">
+      <div class="col-md-6">
+        <center><h1>CONTACT US</h1></center>
+        <div class="form-floating mb-3">
+          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+          <label for="floatingInput">Your Name</label>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+          <label for="floatingPassword">Phone No</label>
+        </div>
+        <div class="form-floating">
+          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+          <label for="floatingPassword">Email</label>
+        </div>
+        <div class="form-floating">
+          <textarea name="message" id="" class="form-control" style="height: 200px;"></textarea>
+          <label for="floatingPassword">Message</label>
+        </div>
+      </div>
+      
+        <div class="col-md-6">
+          <img src="./map.jpeg" alt="">
+      </div>
     </div>
-    
+    </center>
 
   </div>
 
